# srcomp

./: .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml  requirements.txt
docs/: api.rst  compstate.rst  conf.py  history.rst  index.rst  introduction.rst  requirements.txt
script/linting/: pylint  requirements.txt
script/release/: release
script/typing/: requirements.txt
sr/comp/: arenas.py  comp.py  match_operations.py  match_period.py  match_period_clock.py  matches.py  ranker.py  raw_compstate.py  scores.py  teams.py  text_utils.py  types.py  validation.py  venue.py  winners.py  yaml_loader.py
sr/comp/knockout_scheduler/: __init__.py  automatic_builder.py  automatic_scheduler.py  base_scheduler.py  converters.py  exceptions.py  seeding.py  stable_random.py  static_scheduler.py  structured_scheduler.py  types.py
tests/: factories.py  test_base_knockout_scheduler.py  test_comp.py  test_knockout_scheduler.py  test_knockout_scores.py  test_league_scores.py  test_match_period.py  test_match_period_clock.py  test_matches.py  test_ranker.py  test_raw_compstate.py  test_scores.py  test_stable_random.py  test_static_knockout_scheduler.py  test_structured_knockout_scheduler.py  test_team.py  test_teamscore.py  test_tiebreaker.py  test_validation.py  test_venue.py  test_winners.py
